examples/__outputs__/50_anyware/anyware_slot_slot-fetch__slot-fetch.output.txt
/some/path/to/anyware_slot_slot-fetch__slot-fetch.ts:XX:XX
const result = await graffle.gql`
                             ^


TypeError: graffle.gql is not a function
    at <anonymous> (/some/path/to/anyware_slot_slot-fetch__slot-fetch.ts:XX:XX:30)
    at ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX